# fscript-rs

./: .gitignore  Cargo.toml  README.md  build.sh  entitlements.plist  forever.sh  hyperfine.sh  test.py  time.sh
crates/frontend/: Cargo.toml
fs_modules/: math.fs
modules/: args.fs  collection.fs  iterator.fs  math.fs  math_2.fs  random.fs  string.fs  system.fs  test.fs  thread.fs
src/: lib.rs  main.rs
src/backend/: mod.rs  test.rs  tests.rs  utils.rs
src/frontend/: mod.rs  tests.rs  vm.rs
src/std/: gc.rs  io.rs  iter.rs  mod.rs  thread.rs  utils.rs
src/utils/: error.rs  mod.rs
test_script/: bench_class.fs  bench_class_assign.fs  bench_fib_fn.fs  bench_fn.fs  bench_fn_fib.fs  bench_for.fs  bench_hashmap.fs  bench_hashmap_getter.py  bench_hashmap_str.fs  bench_hashmap_str.py  bench_iter.fs  bench_lambda.fs  bench_list.fs  bench_nested_call.fs  bench_nested_call.rb  bench_sort_by.fs  bench_sort_key.fs  bench_str.fs  bench_thread.fs  bench_while.fs  test.fs  test_args.fs  test_assert.fs  test_class.fs  test_closure.fs  test_comment.fs  test_error_handle.fs  test_error_handle2.fs  test_expression.fs  test_fn.fs  test_for.fs  test_gc.fs  test_general.fs  test_global.fs  test_hashmap.fs  test_if_else.fs  test_import.fs  test_iter.fs  test_lambda.fs  test_list_getter.fs  (+14 more)
test_script/bench/: bench_assign_list.fs  bench_assign_list.py  bench_class.fs  bench_class.py  bench_class_assign.fs  bench_delegate.fs  bench_delegate.py  bench_fib.fs  bench_fib.py  bench_fib.rb  bench_fn_cost.fs  bench_fn_cost.py  bench_fn_cost_jit.fs  bench_fn_fib.fs  bench_fn_fib.py  bench_fn_fib.rb  bench_fn_fib_jit.fs  bench_for.fs  bench_for.py  bench_for_jit.fs  bench_format_str.fs  bench_format_str.py  bench_hashmap_getter.fs  bench_hashmap_getter.rb  bench_hashmap_str.fs  bench_hashmap_str.py  bench_hashmap_str.rb  bench_if.fs  bench_if.py  bench_if_jit.fs  bench_iter_filter.fs  bench_iter_filter.py  bench_iter_filter.rb  bench_iter_map.fs  (+13 more)
(+225 files in other folders)
