[package]
name = "fscript-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.8"
mimalloc = "0.1.46"
smallvec = "1.15.0"
# [profile.test]
# opt-level = 2

[features]
default = ["track_memory_size"]
bytecode_trace = []
track_memory_size = []

[profile.release]
overflow-checks = false
debug = true
codegen-units = 1
opt-level = 3
