[package]
name = "fscript-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.8"
mimalloc = "0.1.46"
smallvec = "1.15.0"
indexmap = "2.9.0"
anyhow = "1.0.98"

cranelift = "0.118.0"
cranelift-module = "0.118.0"
cranelift-jit = "0.118.0"
cranelift-native = "0.118.0"

# [profile.test]
# opt-level = 2

[features]
default = ["track_memory_size", "mimalloc", "more_inline"]
bytecode_trace = []
track_memory_size = []
mimalloc = []
count_bytecode = []
more_inline = []
predict_op = []

[profile.release]
overflow-checks = false
debug = true
codegen-units = 1
opt-level = 3
